# jupyter-ai-quickagent

./: .gitignore  BLOG.md  CLI-requirements.txt  INSTRUCTIONS.md  LICENSE  README.md  USAGE.md  install-nondev.sh  install.sh  install_cli.sh  install_nondev.sh  jai_pyproject.toml  pyproject.toml
examples/: passenger
examples/customer_churn/: customer churn.csv  customer_churn.chat
examples/customer_churn/output/: analysis.py  paper.aux  paper.out  paper.tex  research_notebook.ipynb  research_notebook_executed.ipynb  summary.json
examples/mentalhealth/: mentalhealth.chat  mentalhealth.md  rq1_analysis.py  rq3_analysis.py
examples/mentalhealth/output/: paper.tex  research_notebook.ipynb  research_notebook_executed.ipynb  rq1_correlations.csv  rq1_logreg_coefs.csv  rq1_summary_stats.csv  rq2_anova.csv  rq2_bin_stats.csv  rq2_correlations.csv  rq2_platform_by_bin.csv  rq3_mediation.csv  rq3_multireg.csv  rq3_sleep_bin_stats.csv  rq3_sleep_correlations.csv
examples/online_learning/: online_learning.chat  online_vs_offline_learning_dataset.csv
examples/online_learning/output/: analysis.py  paper.aux  paper.out  paper.tex  research_notebook.ipynb  research_notebook_executed.ipynb
examples/passenger/: passenger.chat
examples/passenger/output/: analysis.py  build_notebook.py  paper.tex  research_notebook.ipynb  research_notebook_executed.ipynb  results.json  rq1_corr.csv  rq1_coverage.csv  rq1_logit_coef.csv  rq1_rf_importance.csv  rq2_importance_comparison.csv  (+20 more)
examples/student/: student.chat
examples/student_ai/: student_ai.chat
examples/studentai/: studentai.chat
examples/techlayoffs/: techlayoffs.chat
jupyter_ai_quickagent/: __main__.py  agent_store.py  claude_cli.py  prompt_template.py  quickagent_persona.py
jupyter_ai_quickagent/examples/: research_agent.json
(+28 files in other folders)
