[build-system]
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[project]
name = "jupyter_ai_quickagent"
version = "0.1.0"
description = "A Jupyter AI persona that implements LangChain Deep Agents with interactive agent configuration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jupyter_ai_persona_manager>=0.0.1",
    "jupyter_ai_jupyternaut>=0.0.1",
    "jupyterlab-chat>=0.19.0",
    "deepagents>=0.5.0a4",
    "langchain>=1.0.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.10.0,<3",
    "ddgs>=8.0.0",
]

[project.optional-dependencies]
search = [
    "tavily-python>=0.5.0",
]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.targets.wheel]
packages = ["jupyter_ai_quickagent"]

###############################################################################
# Provide QuickAgent on the personas entry point to `jupyter_ai_persona_manager`.
# See: https://packaging.python.org/en/latest/specifications/entry-points/

[project.entry-points."jupyter_ai.personas"]
quickagent = "jupyter_ai_quickagent.quickagent_persona:QuickAgentPersona"
###############################################################################
